tests/integration/assets/bookinfo-auth-policy-principals.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ratings-policy
  namespace: bookinfo
spec:
  action: DENY
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/default/sa/bookinfo-wrong
              - cluster.local/ns/bookinfo/sa/bookinfo-details
  selector:
    matchLabels:
      app: ratings
