tests/integration/assets/bookinfo-fault-injection-reviews.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: virtual-service-reviews
  labels:
    kiali_wizard: fault_injection
spec:
  hosts:
  - reviews
  http:
  - fault:
      delay:
        fixedDelay: 5s
        percentage:
          value: 100
    route:
    - destination:
        host: reviews
        subset: v1
      weight: 33
    - destination:
        host: reviews
        subset: v2
      weight: 33
    - destination:
        host: reviews
        subset: v3
      weight: 34
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: destination-rule-reviews
spec:
  host: reviews
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
