tests/integration/assets/bookinfo-k8sgateways-addresses.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gatewayapi
  namespace: bookinfo
  labels:
    app: gatewayapi
spec:
  gatewayClassName: istio
  listeners:
    - name: default
      hostname: "bookinfo-istio-system"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
  addresses:
    - type: IPAddress
      value: "192.168.1.1"
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gatewayapi2
  namespace: bookinfo
  labels:
    app: gatewayapi
spec:
  gatewayClassName: istio
  listeners:
    - name: default
      hostname: "bookinfo-istio-system2"
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
  addresses:
    - type: IPAddress
      value: "192.168.1.1"
