tests/integration/assets/bookinfo-k8sgateways-listeners.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: gatewayapi
  namespace: bookinfo
  labels:
    app: gatewayapi
spec:
  gatewayClassName: istio
  listeners:
    - name: default
      hostname: "bookinfo-istio-system"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: gatewayapi2
  namespace: bookinfo
  labels:
    app: gatewayapi
spec:
  gatewayClassName: istio
  listeners:
    - name: default
      hostname: "bookinfo-istio-system"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
