tests/integration/assets/bookinfo-k8sgrpcroutes-services.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gatewayapiservices
  namespace: bookinfo
  labels:
    app: gatewayapi
spec:
  gatewayClassName: istio
  listeners:
  - name: default
    hostname: "bookinfo-istio-system"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  addresses:
  - type: Hostname
    value: "google.com"
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpcrouteservices
  namespace: bookinfo
spec:
  parentRefs:
  - name: gatewayapiservices
    namespace: bookinfo
  hostnames: ["bookinfo-istio-system"]
  rules:
  - matches:
    - method:
        service: "foo"
      headers:
      - name: my-header
        value: some-value
        type: Exact
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: my-added-header
          value: added-value
        remove: [my-removed-header]
    backendRefs:
    - name: wrong
      port: 8000
