tests/integration/assets/bookinfo-k8shttproutes-gateways.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: httproute
  namespace: bookinfo
spec:
  parentRefs:
    - name: gatewayapiwrong
      namespace: bookinfo
  hostnames: ["bookinfo-istio-system"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /get
      backendRefs:
        - name: httpbin
          port: 8000
