tests/integration/assets/bookinfo-k8shttproutes-services.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: gatewayapiservices
  namespace: bookinfo
  labels:
    app: gatewayapi
spec:
  gatewayClassName: istio
  listeners:
    - name: default
      hostname: "bookinfo-istio-system"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
  addresses:
    - type: Hostname
      value: "google.com"
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: httprouteservices
  namespace: bookinfo
spec:
  parentRefs:
    - name: gatewayapiservices
      namespace: bookinfo
  hostnames: ["bookinfo-istio-system"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /get
      backendRefs:
        - name: wrong
          port: 8000
